--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,23 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.resetframe.sandbox005">
+    package="com.resetframe.smartpotapp">
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/default_pot"
         android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <!-- 메인 액티비티 -->
         <activity android:name=".MainActivity">
+        </activity>
+        <!-- 스타트 액티비티 (처음 실행시) -->
+        <activity android:name=".StartActivity">
             <intent-filter>
+                <!-- 시작 액티비티 변경 -->
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".A2Activity"
-            android:label="A2 Activity"
-            android:exported="false"/>
+
+        <activity android:name=".DrawerActivity">
+        </activity>
+
+        <activity android:name=".PotInfoActivity">
+        </activity>
+
+        <activity android:name=".PotControlActivity">
+        </activity>
+
+
 
     </application>
 
