--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,12 +27,21 @@
         </activity>
 
         <activity android:name=".PotInfoActivity">
+
         </activity>
 
         <activity android:name=".PotControlActivity">
         </activity>
 
-
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="com.resetframe.smartpotapp.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/filepaths" />
+        </provider>
 
     </application>
 
